시간표 도메인 api 구현